crates/rome_formatter/tests/specs/prettier/typescript/keywords/module.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: module.ts

---
# Input
```js
module Y3 {
  public module Module {
      class A { s: string }
  }

  // Apparently this parses :P
  export private public protected static readonly abstract async enum X { }

  interface x {
      export private static readonly [x: any]: any;
  }
}

```

# Output
```js
module Y3 {
  public
  module Module {
    class A {
      s: string;
    }
  }

  // Apparently this parses :P
  export
  private
  public
  protected
  static
  readonly;
  abstract;
  async;
  enum X {}

  interface x {
      export private static readonly [x: any]: any;
  }
}

```

# Errors
```
error[SyntaxError]: Illegal use of reserved keyword `public` as an identifier in strict mode
  ┌─ module.ts:2:3
  │
2 │   public module Module {
  │   ^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:2:10
  │
2 │   public module Module {
  │   -------^^^^^^
  │   │      │
  │   │      An explicit or implicit semicolon is expected here...
  │   ...Which is required to end this statement

error[SyntaxError]: expected a class, a function, or a variable declaration but instead found 'private'
  ┌─ module.ts:7:10
  │
7 │   export private public protected static readonly abstract async enum X { }
  │          ^^^^^^^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:18
  │
7 │   export private public protected static readonly abstract async enum X { }
  │          --------^^^^^^
  │          │       │
  │          │       An explicit or implicit semicolon is expected here...
  │          ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:25
  │
7 │   export private public protected static readonly abstract async enum X { }
  │                  -------^^^^^^^^^
  │                  │      │
  │                  │      An explicit or implicit semicolon is expected here...
  │                  ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:35
  │
7 │   export private public protected static readonly abstract async enum X { }
  │                         ----------^^^^^^
  │                         │         │
  │                         │         An explicit or implicit semicolon is expected here...
  │                         ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:42
  │
7 │   export private public protected static readonly abstract async enum X { }
  │                                   -------^^^^^^^^
  │                                   │      │
  │                                   │      An explicit or implicit semicolon is expected here...
  │                                   ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:51
  │
7 │   export private public protected static readonly abstract async enum X { }
  │                                          ---------^^^^^^^^
  │                                          │        │
  │                                          │        An explicit or implicit semicolon is expected here...
  │                                          ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:60
  │
7 │   export private public protected static readonly abstract async enum X { }
  │                                                   ---------^^^^^
  │                                                   │        │
  │                                                   │        An explicit or implicit semicolon is expected here...
  │                                                   ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ module.ts:7:66
  │
7 │   export private public protected static readonly abstract async enum X { }
  │                                                            ------^^^^
  │                                                            │     │
  │                                                            │     An explicit or implicit semicolon is expected here...
  │                                                            ...Which is required to end this statement

error[SyntaxError]: ';' expected'
   ┌─ module.ts:10:14
   │
10 │       export private static readonly [x: any]: any;
   │              ^^^^^^^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: index signature members cannot be static
   ┌─ module.ts:10:22
   │
10 │       export private static readonly [x: any]: any;
   │                      ^^^^^^


```


